# mlip

./: .gitignore  README.md  create_soundscape_melspecs.py  main.py  pyproject.toml  scratch.py
_lightning_logs/version_10/: metrics.csv
_lightning_logs/version_11/: metrics.csv
_lightning_logs/version_13/: metrics.csv
_lightning_logs/version_15/: metrics.csv
_lightning_logs/version_17/: metrics.csv
_lightning_logs/version_19/: metrics.csv
_lightning_logs/version_21/: metrics.csv
_lightning_logs/version_22/: metrics.csv
_lightning_logs/version_23/: metrics.csv
_lightning_logs/version_24/: metrics.csv
_lightning_logs/version_25/: metrics.csv
_lightning_logs/version_26/: metrics.csv
_lightning_logs/version_27/: metrics.csv
_lightning_logs/version_28/: metrics.csv
_lightning_logs/version_29/: metrics.csv
_lightning_logs/version_30/: metrics.csv
_lightning_logs/version_32/: metrics.csv
_lightning_logs/version_33/: metrics.csv
_lightning_logs/version_34/: metrics.csv
_lightning_logs/version_36/: metrics.csv
_lightning_logs/version_37/: metrics.csv
_lightning_logs/version_38/: metrics.csv
_lightning_logs/version_39/: metrics.csv
_lightning_logs/version_4/: metrics.csv
_lightning_logs/version_40/: metrics.csv
_lightning_logs/version_41/: metrics.csv
_lightning_logs/version_42/: metrics.csv
_lightning_logs/version_43/: metrics.csv
_lightning_logs/version_5/: metrics.csv
_lightning_logs/version_6/: metrics.csv
_lightning_logs/version_7/: metrics.csv
_lightning_logs/version_8/: metrics.csv
metrics/fold_0/: metrics.csv
(+49 files in other folders)
