[project]
name = "kagglecompetition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cv>=1.0.0",
    "kagglehub>=0.3.12",
    "librosa>=0.11.0",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.12",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
